@@ -1,3 +1,8 @@
+2005-01-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_network.c: (ospf_sock_init) Save errno before calling
+	  ospfd_privs.change.
+
 2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* ospf_packet.c: (ospf_packet_add) If oi->obuf is NULL, print
